@@ -1,3 +1,8 @@
+2002-10-15  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-scangobj.in: Sort paramspec arrays for
+	greater stability and less random tmpl file diffs.
+
 2002-10-14  Matthias Clasen  <maclas@gmx.de>
 
 	* examples/Makefile.am (SCANOBJ_FILES): Add $(DOC_MODULE).interfaces.
